--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,11 @@
     "noImplicitAny": true,
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
+    "strict": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
     "target": "es6",
     "typeRoots": [
       "node_modules/@types"
