--- a/package.json
+++ b/package.json
@@ -4,34 +4,35 @@
     "url": "https://rickosborne.org"
   },
   "dependencies": {
-    "@slack/client": "^4.10.0",
-    "inclined-plane": "^0.5.1",
+    "@slack/rtm-api": "^5.0.2",
+    "@slack/web-api": "^5.1.0",
+    "inclined-plane": "^0.5.2",
     "mysql2": "^1.6.5",
-    "node-fetch": "^2.3.0",
-    "rxjs": "^6.4.0",
+    "node-fetch": "^2.6.0",
+    "rxjs": "^6.5.2",
     "twitter": "^1.7.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/ejs": "^2.6.3",
-    "@types/mocha": "^5.2.6",
+    "@types/mocha": "^5.2.7",
     "@types/mysql2": "github:types/mysql2",
-    "@types/node": "^11.10.0",
-    "@types/node-fetch": "^2.1.6",
+    "@types/node": "^10",
+    "@types/node-fetch": "^2.5.0",
     "@types/twitter": "^1.7.0",
     "bufferutil": "^4.0.1",
     "cardinal": "^2.1.1",
     "chai": "^4.2.0",
-    "mocha": "^6.0.2",
-    "nyc": "^13.3.0",
-    "ts-loader": "^5.3.3",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1",
+    "ts-loader": "^6.0.4",
     "ts-mocha": "^6.0.0",
-    "ts-node": "^8.0.3",
-    "tslint": "^5.13.1",
-    "typescript": "^3.3.3333",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.3",
     "utf-8-validate": "^5.0.2",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
+    "webpack": "^4.38.0",
+    "webpack-cli": "^3.3.6",
     "wtfnode": "^0.8.0"
   },
   "name": "scrubjay",
@@ -43,9 +44,9 @@
     "package": "webpack-cli",
     "precompile": "npm run clean && npm run lint",
     "prepackage": "npm run clean && npm run lint",
-    "un-prestart": "npm run package",
     "start": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node $NODE_DEBUG_OPTION ./node_modules/.bin/ts-node scrubjay.ts",
-    "test": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node $NODE_DEBUG_OPTION ./node_modules/.bin/ts-mocha test/**/*.ts"
+    "test": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node $NODE_DEBUG_OPTION ./node_modules/.bin/ts-mocha test/**/*.ts",
+    "un-prestart": "npm run package"
   },
-  "version": "0.1.0"
+  "version": "0.2.0"
 }
