--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@slack/rtm-api": "^5.0.2",
     "@slack/web-api": "^5.1.0",
-    "inclined-plane": "^0.5.2",
+    "aws-sdk": "^2.504.0",
+    "inclined-plane": "^0.5.3",
     "mysql2": "^1.6.5",
     "node-fetch": "^2.6.0",
     "rxjs": "^6.5.2",
@@ -31,7 +32,7 @@
     "tslint": "^5.18.0",
     "typescript": "^3.5.3",
     "utf-8-validate": "^5.0.2",
-    "webpack": "^4.38.0",
+    "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "wtfnode": "^0.8.0"
   },
@@ -41,12 +42,17 @@
     "clean": "rm -Rf dist",
     "compile": "tsc",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
-    "package": "webpack-cli",
+    "package": "npm run package:scrubjay && npm run package:feeder && npm run package:song",
+    "package:scrubjay": "webpack-cli --config song.webpack.config.js",
+    "package:song": "webpack-cli --config song.webpack.config.js",
+    "package:feeder": "webpack-cli --config feeder.webpack.config.js",
     "precompile": "npm run clean && npm run lint",
     "prepackage": "npm run clean && npm run lint",
-    "start": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node $NODE_DEBUG_OPTION ./node_modules/.bin/ts-node scrubjay.ts",
-    "test": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node $NODE_DEBUG_OPTION ./node_modules/.bin/ts-mocha test/**/*.ts",
+    "start": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node ./node_modules/.bin/ts-node scrubjay.ts",
+    "start:feeder": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node ./node_modules/.bin/ts-node feeder.ts",
+    "start:song": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node ./node_modules/.bin/ts-node song.ts",
+    "test": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node ./node_modules/.bin/ts-mocha test/**/*.ts",
     "un-prestart": "npm run package"
   },
-  "version": "0.2.0"
+  "version": "0.3.0"
 }
