--- a/package.json
+++ b/package.json
@@ -4,41 +4,43 @@
     "url": "https://rickosborne.org"
   },
   "dependencies": {
-    "@slack/rtm-api": "^5.0.2",
-    "@slack/web-api": "^5.1.0",
-    "aws-sdk": "^2.504.0",
+    "@slack/rtm-api": "^5.0.3",
+    "@slack/web-api": "^5.6.0",
+    "aws-sdk": "^2.589.0",
     "inclined-plane": "^0.5.3",
-    "mysql2": "^1.6.5",
+    "mysql2": "^1.7.0",
     "node-fetch": "^2.6.0",
-    "rxjs": "^6.5.2",
+    "rxjs": "^6.5.3",
     "twitter": "^1.7.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/ejs": "^2.6.3",
+    "@types/chai": "^4.2.7",
+    "@types/ejs": "^2.7.0",
     "@types/mocha": "^5.2.7",
     "@types/mysql2": "github:types/mysql2",
-    "@types/node": "^10",
-    "@types/node-fetch": "^2.5.0",
+    "@types/node": "^12.12.17",
+    "@types/node-fetch": "^2.5.4",
     "@types/twitter": "^1.7.0",
     "bufferutil": "^4.0.1",
     "cardinal": "^2.1.1",
     "chai": "^4.2.0",
-    "mocha": "^6.2.0",
+    "mocha": "^6.2.2",
     "nyc": "^14.1.1",
-    "ts-loader": "^6.0.4",
+    "ts-loader": "^6.2.1",
     "ts-mocha": "^6.0.0",
-    "ts-node": "^8.3.0",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.3",
+    "ts-node": "^8.5.4",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.3",
     "utf-8-validate": "^5.0.2",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
     "wtfnode": "^0.8.0"
   },
   "name": "scrubjay",
   "private": true,
   "scripts": {
+    "audit": "npm audit",
+    "audit:fix": "npm audit fix",
     "clean": "rm -Rf dist",
     "compile": "tsc",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
@@ -54,5 +56,5 @@
     "test": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node ./node_modules/.bin/ts-mocha test/**/*.ts",
     "un-prestart": "npm run package"
   },
-  "version": "0.3.7"
+  "version": "0.3.8"
 }
