--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@slack/web-api": "^5.7.0",
     "aws-lambda": "^1.0.5",
     "aws-sdk": "^2.620.0",
-    "fetch-ponyfill": "^6.1.0",
     "inclined-plane": "^0.5.3",
     "mysql2": "^2.1.0",
     "rxjs": "^6.5.4",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.41",
