--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "start": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node ./node_modules/.bin/ts-node scrubjay.ts",
     "start:feeder": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node ./node_modules/.bin/ts-node feeder.ts",
     "start:song": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node ./node_modules/.bin/ts-node song.ts",
-    "test": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node ./node_modules/.bin/ts-mocha test/**/*.ts",
+    "test": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node ./node_modules/.bin/ts-mocha --timeout 30000 test/**/*.ts",
     "un-prestart": "npm run package"
   },
-  "version": "0.5.1"
+  "version": "0.5.2"
 }
