--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "compile": "tsc",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "package": "npm run package:scrubjay && npm run package:feeder && npm run package:song && npm run package:slash-lambda",
-    "package:scrubjay": "webpack-cli --config song.webpack.config.js",
-    "package:slash-lambda": "webpack-cli --config slash-lambda.webpack.config.js",
-    "package:song": "webpack-cli --config song.webpack.config.js",
-    "package:feeder": "webpack-cli --config feeder.webpack.config.js",
+    "package:scrubjay": "NODE_OPTIONS='--max_old_space_size=1024' webpack-cli --config song.webpack.config.js",
+    "package:slash-lambda": "NODE_OPTIONS='--max_old_space_size=1024' webpack-cli --config slash-lambda.webpack.config.js",
+    "package:song": "NODE_OPTIONS='--max_old_space_size=1024' webpack-cli --config song.webpack.config.js",
+    "package:feeder": "NODE_OPTIONS='--max_old_space_size=1024' webpack-cli --config feeder.webpack.config.js",
     "precompile": "npm run clean && npm run lint",
     "prepackage": "npm run clean && npm run lint",
     "start": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node ./node_modules/.bin/ts-node scrubjay.ts",
@@ -60,5 +60,5 @@
     "test": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node ./node_modules/.bin/ts-mocha --timeout 30000 test/**/*.ts",
     "un-prestart": "npm run package"
   },
-  "version": "0.5.2"
+  "version": "0.5.3"
 }
