--- a/package.json
+++ b/package.json
@@ -4,40 +4,40 @@
     "url": "https://rickosborne.org"
   },
   "dependencies": {
-    "@slack/rtm-api": "^6.0.0",
-    "@slack/web-api": "^6.0.0",
-    "aws-lambda": "^1.0.6",
-    "aws-sdk": "^2.846.0",
-    "inclined-plane": "^0.5.3",
-    "mysql2": "^2.2.5",
-    "rxjs": "^6.6.3",
-    "twitter": "^1.7.1",
-    "xmlhttprequest": "^1.8.0"
+    "@slack/rtm-api": "6.0.0",
+    "@slack/web-api": "6.2.4",
+    "aws-lambda": "1.0.6",
+    "aws-sdk": "2.936.0",
+    "inclined-plane": "0.5.3",
+    "mysql2": "2.2.5",
+    "rxjs": "7.1.0",
+    "twitter": "1.7.1",
+    "xmlhttprequest": "1.8.0"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.72",
-    "@types/aws-sdk": "^2.7.0",
-    "@types/chai": "^4.2.15",
-    "@types/ejs": "^3.0.6",
-    "@types/mocha": "^8.2.1",
+    "@types/aws-lambda": "8.10.77",
+    "@types/aws-sdk": "2.7.0",
+    "@types/chai": "4.2.19",
+    "@types/ejs": "3.0.6",
+    "@types/mocha": "8.2.2",
     "@types/mysql2": "github:types/mysql2",
-    "@types/node": "^14.14.28",
-    "@types/twitter": "^1.7.0",
-    "bufferutil": "^4.0.3",
-    "cardinal": "^2.1.1",
-    "chai": "^4.3.0",
-    "mocha": "^8.3.0",
-    "nyc": "^15.1.0",
-    "ts-loader": "^8.0.17",
-    "ts-mocha": "^8.0.0",
-    "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.1.5",
-    "utf-8-validate": "^5.0.4",
-    "webpack": "^5.23.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-node-externals": "^2.5.2",
-    "wtfnode": "^0.8.4"
+    "@types/node": "15.12.5",
+    "@types/twitter": "1.7.0",
+    "bufferutil": "4.0.3",
+    "cardinal": "2.1.1",
+    "chai": "4.3.4",
+    "mocha": "8.4.0",
+    "nyc": "15.1.0",
+    "ts-loader": "9.2.3",
+    "ts-mocha": "8.0.0",
+    "ts-node": "10.0.0",
+    "tslint": "6.1.3",
+    "typescript": "4.3.4",
+    "utf-8-validate": "5.0.5",
+    "webpack": "5.41.1",
+    "webpack-cli": "4.7.2",
+    "webpack-node-externals": "3.0.0",
+    "wtfnode": "0.9.0"
   },
   "name": "scrubjay",
   "private": true,
@@ -47,6 +47,7 @@
     "clean": "rm -Rf dist",
     "compile": "tsc",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "nuke": "rm -Rf node_modules && rm -Rf package-lock.json && npm install && npm audit fix",
     "package": "npm run package:feeder && npm run package:song && npm run package:slash-lambda",
     "package:scrubjay": "NODE_OPTIONS='--max_old_space_size=2048' webpack-cli --config song.webpack.config.js",
     "package:slash-lambda": "NODE_OPTIONS='--max_old_space_size=2048' webpack-cli --config slash-lambda.webpack.config.js",
@@ -60,5 +61,5 @@
     "test": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' node ./node_modules/.bin/ts-mocha --timeout 30000 test/**/*.ts",
     "un-prestart": "npm run package"
   },
-  "version": "0.5.14"
+  "version": "0.5.15"
 }
